# LLM-Financial-Market-Forecasting

./: .gitignore  HPC_Setup.md  README.md  pyproject.toml
FinArena_Benchmark/: README.md
FinArena_Benchmark/FNSPID/: extract_news.py  extract_price.py
FinArena_Benchmark/FinArena/: 0_preprocess.py  1_prediction_kaggle.py  2_evaluation.py
Stage1_Data_Pipeline/: README.md  data.py
Stage1_Data_Pipeline/modules/: __init__.py  financial_reports.py  news_aggregator.py  rate_limiter.py  sp500.py  stock_prices.py  utils.py
Stage1_Data_Pipeline/modules/news/: __init__.py  hacker_news.py
Stage1_Dataset_Preparation/: README.md  filter.pbs  filter.py  score.pbs  score.py
Stage1_RL_Dataset_Creation/: README.md  create_rl_training_set.py  rf_training.pbs  rl_training.py
Stage1_SFT_Dataset_Creation/: 1_prepare_training_dataset.py  2_generate_training_dataset.pbs  2_generate_training_dataset.py  3_clean_training_set.py  4_create_training_set.py  README.md
Stage2_ChatTS_Training/: README.md  merge_lora.pbs  train_rl_lora.pbs  train_sft_lora.pbs
Stage3_Forecast_Benchmark/: README.md  benchmark.pbs  benchmark.py
Stage4_Forecast_Evaluation/: 1_clean.py  2_benchmark.py  README.md
