[project]
name = "thesis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Justin Lou"},
]
dependencies = ["pandas>=2.3.0", "scikit-learn>=1.7.0", "huggingface-hub>=0.33.2", "tiktoken>=0.11.0", "yfinance>=0.2.66"]
requires-python = "==3.11.*"
readme = "README.md"

[tool.pdm]
distribution = false
